# baku

./: .gitmodules  CMakeLists.txt  LICENSE  README.md
include/baku/: baku.hh  core.hh  meta.hh  utility.hh  version.hh
include/baku/core/: common.hh  feed.hh  pour.hh
src/: main.cc  meta.cc  utility.cc
src/core/: feed.cc  pour.cc
